# livvv

./: .gitignore  README.md  package-lock.json  package.json  start-local.bat  tsconfig.tsbuildinfo  vitest.config.ts
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/api/live-proxy/: route.ts
app/api/live-token/: route.ts
app/icons/icon-192.png/: route.tsx
app/icons/icon-512.png/: route.tsx
components/: live-console.tsx  sw-register.tsx
lib/: live-session-config.ts
lib/client/: audio-utils.ts  browser-audio-player.ts  camera-streamer.ts  gemini-live-client.ts  image-attachment.ts  live-message-parser.ts  microphone-recorder.ts  screen-streamer.ts  use-wake-lock.ts
lib/server/: live-token.ts
proxy/: README.md  cloudflare-worker.js
proxy/fly-app/: main.py  pyproject.toml
public/: sw.js
tests/: audio-utils.test.ts  gemini-live-client.test.ts  live-message-parser.test.ts  live-session-config.test.ts
