[project]
name = "livvv-proxy"
version = "0.1.0"
description = "WebSocket proxy that forwards Gemini Live API traffic so users in regions where Google AI is geofenced can use Liv without a VPN."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
    "httpx>=0.27",
]
